--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,12 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.wodada">
+
     <application
-        android:label="login_app"
+        android:label="modernlogintute"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:hardwareAccelerated="true">
+        
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -19,6 +23,17 @@
               android:name="io.flutter.embedding.android.NormalTheme"
               android:resource="@style/NormalTheme"
               />
+            <meta-data
+              android:name="com.naver.sdk.clientId"
+              android:value="@string/client_id" />
+            <meta-data
+              android:name="com.naver.sdk.clientSecret"
+              android:value="@string/client_secret" />
+            <meta-data
+              android:name="com.naver.sdk.clientName"
+              android:value="@string/client_name" />            
+        <!--</activity>
+        <activity android:name="com.kakao.skd.flutter.AuthCodeCustomTabsActivity" android:exported="true">-->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
@@ -29,5 +44,21 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+            <!-- 카카오 로그인 커스텀 URL 스킴 설정 -->
+        <activity 
+            android:name="com.kakao.sdk.flutter.AuthCodeCustomTabsActivity"
+            android:exported="true">
+            <intent-filter android:label="flutter_web_auth">
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+            <!-- "kakao${YOUR_NATIVE_APP_KEY}://oauth" 형식의 앱 실행 스킴 설정 -->
+            <!-- 카카오 로그인 Redirect URI -->
+                <data android:scheme="kakao2348db8c58445181cc371817332fafaf" android:host="oauth"/>
+            </intent-filter>
+        </activity>
+    
     </application>
 </manifest>
