--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  kakao_flutter_sdk_user: ^1.2.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^4.7.3
   loading_overlay: ^0.3.0
   rflutter_alert: ^2.0.7
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -65,7 +66,10 @@ flutter:
     - assets/images/
     - assets/images/icons/facebook.png
     - assets/images/icons/google.png
-    - assets/images/icons/linkedin.png
+    - assets/images/icons/kakao_login.png
+    - assets/images/icons/naver.png
+    - assets/images/icons/btn1.png
+    - assets/images/icons/btn2.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
